# elle-elle-aime

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  add_prefix.py  docker-compose.yml  elleelleaime.def  evaluate_breaker_samples.py  evaluate_patches.py  example_langchain.py  export_results.py  extract_project_data.py  generate_breaker_samples.py  generate_mufin_samples.py  generate_patches.py  generate_samples.py  mufin_ft.py  mufin_ft_jobscript  mufin_infer_jobscript  process_mufin_samples.py  pyproject.toml  pytest.ini  run.sh  run_mufin_ft.sh  setup.sh
.github/workflows/: lint.yml  tests.yml
benchmarks/: GrowingBugRepository
elleelleaime/: .env.example  generate.py  generate_patches.py  generate_samples.py  sample.py  setup.py  test_sample.py
elleelleaime/core/benchmarks/: benchmark.py  bug.py  compile_result.py  test_result.py
elleelleaime/core/caching/: cache.py
elleelleaime/core/utils/: benchmarks.py  cloze_prompt.py  jsonl.py  utils.py
elleelleaime/evaluate/: evaluate.py
elleelleaime/evaluate/strategies/: registry.py  strategy.py
elleelleaime/export/cost/: cost_calculator.py
elleelleaime/generate/: generate.py
elleelleaime/generate/strategies/: registry.py  strategy.py
elleelleaime/process/mufin/: registry.py  strategy.py
elleelleaime/sample/: build.py  registry.py  sample.py  sample_generation.py
elleelleaime/sample/mufin/: registry.py  strategy.py
elleelleaime/sample/prompting/: prompting_strategy.py  prompting_strategy_registry.py  registry.py  strategy.py
elleelleaime/sample/strategies/: infilling.py  instruct.py  instruct_python.py  sigonly_infilling.py  sigonly_instruct.py  zero_shot_single_hunk.py
elleelleaime/tests/sample/: test_generate_samples.py
llmtuner/: __init__.py
llmtuner/hfparams/: __init__.py  data_args.py  finetuning_args.py  general_args.py  generating_args.py  model_args.py
llmtuner/tuner/: __init__.py  train.py
llmtuner/tuner/core/: __init__.py  parser.py
resources/scripts/: inference.py
src/: ask_defects4j.py  run_chatgpt.py
src/core/: utils.py
src/core/benchmarks/: Refactory.py
src/core/chatgpt/: README.md  ask_chatgpt_for_pr.py  verify_chatgpt_refactory.py
src/core/database/: engine.py
src/core/large_language_models/: ask_codex_defects4j.py  ask_hf_defects4j.py  codex.py  verify_codex_defects4j.py
src/core/tools/: load_paths.py  test_argument.py  tokenizer.py
tests/core/ghrb/: test_ghrb.py
tests/evaluate/: test_evaluate_google.py  test_evaluate_instruct.py  test_evaluate_mistral.py  test_evaluate_openai.py  test_evaluate_openrouter.py  test_evaluate_patches.py  test_evaluate_replace.py
tests/mufin/: test_generate_breaker_samples.py  test_generate_mufin_samples.py
tests/sample/fill_in_the_middle/: test_santacoder.py  test_starcoder.py
tests/sample/function_to_function/: test_function_to_function.py
(+90 files in other folders)
