[tool.poetry]
name = "elleelleaime"
version = "0.0.1"
description = "Automatic Program Repair with Large Language Models"
license = "MIT"
authors = [
    "Pengyu Zhao <pengyu@kth.se>"
]
repository = "https://github.com/ASSERT-KTH/elle-elle-aime"
homepage = "https://github.com/ASSERT-KTH/elle-elle-aime"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
javalang = "^0.13.0"
openai = "^1.35.1"
python-dotenv = "^1.0.1"
whatthepatch="^1.0.5"
transformers = {extras = ["torch"], version = "^4.33.0"}
fire = "^0.6.0"
tqdm = "^4.65.4"
numpy = "^1.25.2"
unidiff = "^0.7.5"
backoff = "^2.2.1"
black = "^23.7.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
accelerate = "^0.28.0"
sentencepiece = "^0.1.99"
protobuf = "^4.24.2"
datasets = "^2.14.5"
jupyter = "^1.0.0"
peft = "^0.5.0"
bitsandbytes = "^0.43.0"
scipy = "^1.11.2"
wandb = "^0.15.10"
evaluate = "^0.4.0"
ninja = "^1.11.1"
packaging = "^23.1"
safetensors = "^0.3.3"
trl = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
